--- a/team_blog/pom.xml
+++ b/team_blog/pom.xml
@@ -170,7 +170,28 @@
       <version>2.3.1</version>
       <scope>provided</scope>
     </dependency>
+
+    <!--日期datetime-->
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.9.8</version>
+    </dependency>
+    <!--gson-->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.2.4</version>
+    </dependency>
+    <!--md5-->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.3.2</version>
+    </dependency>
   </dependencies>
+
+
 
 
   <build>
